Fixed teaser image cropping

--- a/src/scss/teaser.scss
+++ b/src/scss/teaser.scss
@@ -2,7 +2,7 @@
   blockquote {
     font-size: 2.8em;
   }
-  img {
+  .gatsby-image-wrapper {
     width: 100%;
     margin-top: 2.4em;
   }
